--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -25,15 +25,15 @@
         android:text="@string/take_action"
         android:id="@+id/takeActionButton"
         android:layout_alignTop="@+id/ignoreButton"
-        android:layout_toLeftOf="@+id/notificationTextView"
-        android:layout_toStartOf="@+id/notificationTextView" />
+        android:layout_toStartOf="@+id/notificationTextView"
+        android:layout_toLeftOf="@+id/notificationTextView" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ignore"
         android:id="@+id/ignoreButton"
-        android:layout_marginBottom="54dp"
+        android:layout_marginBottom="53dp"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/notificationTextView"
         android:layout_toEndOf="@+id/notificationTextView" />
