--- a/app/src/main/res/layout/fragment_subscriber.xml
+++ b/app/src/main/res/layout/fragment_subscriber.xml
@@ -24,7 +24,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/textView2" />
+        android:layout_above="@+id/dataUpdateTextView" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -32,7 +32,7 @@
         android:id="@+id/subscriberToRemoveSpinner"
         android:layout_marginLeft="27dp"
         android:layout_marginStart="27dp"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/dataUpdateTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Refresh"
-        android:id="@+id/refreshButton"
+        android:id="@+id/refreshSubscriberButton"
         android:layout_marginTop="25dp"
         android:layout_marginRight="25dp"
         android:layout_alignParentTop="true"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/textView2"
+        android:id="@+id/dataUpdateTextView"
         android:layout_above="@+id/removeSubscriberButton"
         android:layout_centerHorizontal="true" />
 
