--- a/app/src/main/res/layout/fragment_subscriber.xml
+++ b/app/src/main/res/layout/fragment_subscriber.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.beekill.matdienapp.activities.Admin.SubscriberFragment">
+    tools:context="com.example.beekill.matdienapp.activities.admin.SubscriberFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
