--- a/app/src/main/res/layout/dialog_add_device.xml
+++ b/app/src/main/res/layout/dialog_add_device.xml
@@ -6,18 +6,22 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:weightSum="1">
 
         <EditText
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/bluetoothAddressEditText" />
+            android:id="@+id/bluetoothAddressEditText"
+            android:layout_weight="1.00" />
 
         <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/qrDetectButton"
-            android:src="@android:drawable/ic_menu_camera" />
+            android:src="@android:drawable/ic_menu_camera"
+            android:onClick="onQrDetectButtonClicked" />
     </LinearLayout>
 
     <EditText
@@ -26,5 +30,28 @@
         android:inputType="phone"
         android:ems="10"
         android:id="@+id/phoneNumberEditText" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/cancel"
+            android:id="@+id/cancelButton"
+            android:onClick="onCancelButtonClicked" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@android:string/ok"
+            android:id="@+id/okButton"
+            android:onClick="onOkButtonClicked" />
+    </LinearLayout>
 
 </LinearLayout>
