--- a/app/src/main/res/layout/fragment_subscriber.xml
+++ b/app/src/main/res/layout/fragment_subscriber.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/dataUpdateTextView" />
+        android:layout_above="@+id/dataUpdateTextView"
+        android:visibility="invisible" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -55,5 +56,14 @@
         android:layout_alignRight="@+id/refreshSubscriberButton"
         android:layout_alignEnd="@+id/refreshSubscriberButton"
         android:src="@drawable/ic_add_black" />
+
+    <ExpandableListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/statusSubscriberExpandable"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/dataUpdateTextView" />
 
 </RelativeLayout>
