--- a/app/src/main/res/layout/activity_devices.xml
+++ b/app/src/main/res/layout/activity_devices.xml
@@ -3,18 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.devices.DevicesActivity">
+    tools:context=".activities.devices.DevicesActivity"
+    android:paddingTop="5dp">
 
     <GridView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/gridView"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:numColumns="2"/>
+        android:numColumns="2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
