--- a/app/src/main/res/layout/fragment_add_device.xml
+++ b/app/src/main/res/layout/fragment_add_device.xml
@@ -5,7 +5,9 @@
     android:id="@+id/fragment_add_device">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addIconImageView" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/addIconImageView"
+        android:foregroundGravity="center_vertical|center_horizontal"
+        android:padding="20dp" />
 </LinearLayout>
