Implement change password command

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Old Password"
+        android:text="@string/admin_password"
         android:id="@+id/textView3"
         android:layout_marginTop="82dp"
         android:layout_alignParentTop="true"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="New Password"
+        android:text="@string/new_password"
         android:id="@+id/textView4"
         android:layout_below="@+id/textView3"
         android:layout_alignLeft="@+id/textView3"
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Re-type Password"
+        android:text="@string/re_type_password"
         android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
         android:layout_alignLeft="@+id/textView4"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/oldPassEditText"
+        android:id="@+id/adminPassEditText"
         android:layout_above="@+id/textView4"
         android:layout_toRightOf="@+id/textView5"
         android:layout_toEndOf="@+id/textView5" />
@@ -68,8 +68,8 @@
         android:ems="10"
         android:id="@+id/newPassEditText"
         android:layout_above="@+id/textView5"
-        android:layout_alignLeft="@+id/oldPassEditText"
-        android:layout_alignStart="@+id/oldPassEditText" />
+        android:layout_alignLeft="@+id/adminPassEditText"
+        android:layout_alignStart="@+id/adminPassEditText" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -80,4 +80,28 @@
         android:layout_alignBottom="@+id/textView5"
         android:layout_alignLeft="@+id/newPassEditText"
         android:layout_alignStart="@+id/newPassEditText" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="User"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/adminPassEditText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/userSpinner"
+        android:layout_alignLeft="@+id/adminPassEditText"
+        android:layout_alignStart="@+id/adminPassEditText"
+        android:layout_alignRight="@+id/adminPassEditText"
+        android:layout_alignEnd="@+id/adminPassEditText"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_above="@+id/adminPassEditText"
+        android:spinnerMode="dropdown"
+        android:entries="@array/user_array" />
+
 </RelativeLayout>
